fix scroll on ie

--- a/assets/scss/components/_sections.scss
+++ b/assets/scss/components/_sections.scss
@@ -94,7 +94,7 @@ html {
     flex-direction: column;
     align-items: center;
 	position: relative;
-	padding-top: 2em;
+	padding-top: 0;
     .btn {
     	border-color: $color-primary;
     	color: $color-primary;
@@ -108,7 +108,7 @@ html {
     	}
 		header {
 			position: absolute;
-			top: 9%;
+			top: 5%;
 			z-index: 10;
 			left: 50%;
 			transform: translateX(-50%);
